load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "dbsqlite3",
    srcs = [
        "db.go",
        "solution.go",
    ],
    importpath = "github.com/arcenik/go-curiositybox-calendar-puzzle-solver/dbsqlite3",
    visibility = ["//visibility:public"],
    deps = [
        "//board",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
    ],
)
